fixing new sticky js code, adding rFA debouncer, need to work on css for html and fixed objects-shifting when fixed

--- a/theme_src/css/supporting/_nav.scss
+++ b/theme_src/css/supporting/_nav.scss
@@ -83,14 +83,6 @@
   margin-left: 0;
 }
 
-/* ## Primary and Secondary Navigation
---------------------------------------------- */
-
-.nav-primary,
-.nav-secondary {
-  border-bottom: 1px solid $color-border-default;
-}
-
 
 @include media('>md') { //992px
 
