--- a/theme_src/css/supporting/_siteheader.scss
+++ b/theme_src/css/supporting/_siteheader.scss
@@ -22,7 +22,7 @@
   .menu-toggle {
     position: absolute;
     top: 0;
-    right: 3rem;
+    right: 1rem;
   }
 
   @include media('>md') {
